--- a/blog/2025-07-25-build-globalconnect-financial-microservices-architecture-tutorial.mdx
+++ b/blog/2025-07-25-build-globalconnect-financial-microservices-architecture-tutorial.mdx
@@ -21,6 +21,8 @@ date: 2025-07-27
 import GiscusComments from "@site/src/components/GiscusComments";
 import Newsletter from "@site/src/components/Newsletter";
 
+<!--truncate-->
+
 <GiscusComments />
 <Newsletter
   title="🚀 Enjoyed this post?"
