--- a/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
+++ b/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
@@ -106,6 +106,8 @@ import Newsletter from "@site/src/components/Newsletter";
   </div>
 </div>
 
+<!--truncate-->
+
 ## Executive Summary
 
 Emergency departments (EDs) worldwide face critical operational challenges including extended patient wait times, facility overcrowding, and suboptimal triage protocols. This case study presents a systematic approach to addressing these challenges through the integration of systems engineering principles, artificial intelligence, and operations research methodologies.
