--- a/blog/2025-08-04-You May Soon be Irrelavant as Data Scientist if.mdx
+++ b/blog/2025-08-04-You May Soon be Irrelavant as Data Scientist if.mdx
@@ -7,6 +7,7 @@ date: 2025-08-04
 ---
 
 import GiscusComments from "@site/src/components/GiscusComments";
+import Newsletter from "@site/src/components/Newsletter";
 
 # 🚨 The Data Science Reality Check: Your $50K Skills Are About to Be Worthless (Unless You Do This)
 
