--- a/blog/2025-08-04-You May Soon be Irrelavant as Data Scientist if.mdx
+++ b/blog/2025-08-04-You May Soon be Irrelavant as Data Scientist if.mdx
@@ -447,7 +447,7 @@ A million-dollar data scientist isn't just building models in Jupyter notebooks.
 
 ### Technical Skills That AI Can't Automate
 
-#### **1. System Design & Architecture**
+#### <span style={{color: '#9b59b6'}}>**1. System Design & Architecture**</span>
 
 ```python
 # Instead of building models, design systems:
@@ -465,7 +465,7 @@ class MLPipelineArchitect:
         pass
 ```
 
-#### **2. Business Strategy Integration**
+#### <span style={{color: '#9b59b6'}}>**2. Business Strategy Integration**</span>
 
 **Example conversation 7-figure data scientists have:**
 
@@ -473,7 +473,7 @@ class MLPipelineArchitect:
 > **7-Figure DS:** "I can build a customer lifetime value prediction system that optimizes ad spend across 12 channels, potentially reducing CAC by 25-30% while maintaining quality. Implementation timeline is 8 weeks, expected ROI is $50M annually."
 > **Regular DS:** "I can build a model to predict customer churn"
 
-#### **3. Cross-Functional Leadership**
+#### <span style={{color: '#9b59b6'}}>**3. Cross-Functional Leadership**</span>
 
 **What 7-figure data scientists manage:**
 
